Reduce Java build warnings