@@ -50,7 +50,7 @@ public class SSAccountPlanExporter {
     public void doExport(SSAccountPlan pAccountPlan) throws IOException, SSImportException {
         WorkbookSettings iSettings = new WorkbookSettings();
 
-        iSettings.setLocale(new Locale("sv", "SE"));
+        iSettings.setLocale(Locale.of("sv", "SE"));
         iSettings.setEncoding("windows-1252");
         iSettings.setExcelDisplayLanguage("SE");
         iSettings.setExcelRegionalSettings("SE");
