@@ -73,7 +73,7 @@ public class SSAccountPlanImporter {
     public static void doImport(InputStream iInputStream) throws IOException {
         WorkbookSettings iSettings = new WorkbookSettings();
 
-        iSettings.setLocale(new Locale("sv", "SE"));
+        iSettings.setLocale(Locale.of("sv", "SE"));
         iSettings.setEncoding("windows-1252");
         iSettings.setExcelDisplayLanguage("SE");
         iSettings.setExcelRegionalSettings("SE");
